Fix: Backface visibility compatibility

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,6 +66,7 @@ body {
 /*--- Fix for Fixed Navbar jumping on scroll --*/
 .fixed-top {
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 /*--- Fixed Landing Page Section -- */
